--- a/index.html
+++ b/index.html
@@ -15,51 +15,67 @@
 
   <body>
     <main>
-      <div class="container">
-        <div class="avatar">
-          <span>
-            <img class="rotate" src="images/build.svg" alt="Selo Rocketseat" />
-          </span>
-          <img
-            id="userPhoto"
-            src="https://github.com/camposerick.png"
-            alt="Foto Pessoal"
-          />
+      <div class="box">
+        <div class="container">
+          <div class="avatar">
+            <span>
+              <img
+                class="rotate"
+                src="images/build.svg"
+                alt="Selo Rocketseat"
+              />
+            </span>
+            <img
+              id="userPhoto"
+              src="https://github.com/camposerick.png"
+              alt="Foto Pessoal"
+            />
+          </div>
+
+          <h1 id="userName">Érick Campos</h1>
+
+          <a
+            id="userLink"
+            href="https://github.com/camposerick"
+            target="_blank"
+          >
+            <img src="images/github.svg" alt="github" />
+            <span id="userLogin">camposerick</span>
+          </a>
+
+          <p id="userBio">
+            An instructor focused on helping people start programming for web
+          </p>
+
+          <ul id="socialLinks">
+            <li class="linkedin">
+              <a
+                href="https://www.linkedin.com/in/camposerick/"
+                target="_blank"
+              >
+                <img src="images/linkedin.svg" alt="ícone linkedin" />
+              </a>
+            </li>
+            <li class="instagram">
+              <a href="https://instagram.com/camposerick_" target="_blank">
+                <img src="images/instagram.svg" alt="ícone instagram" />
+              </a>
+            </li>
+            <li class="facebook">
+              <a
+                href="https://www.facebook.com/erick.aguero.7/"
+                target="_blank"
+              >
+                <img src="images/facebook.svg" alt="ícone facebook" />
+              </a>
+            </li>
+            <li class="twitter">
+              <a href="https://twitter.com/_erickcampos" target="_blank">
+                <img src="images/twitter.svg" alt="ícone twitter" />
+              </a>
+            </li>
+          </ul>
         </div>
-
-        <h1 id="userName">Érick Campos</h1>
-
-        <a id="userLink" href="https://github.com/camposerick" target="_blank">
-          <img src="images/github.svg" alt="github" />
-          <span id="userLogin">camposerick</span>
-        </a>
-
-        <p id="userBio">
-          An instructor focused on helping people start programming for web
-        </p>
-
-        <ul id="socialLinks">
-          <li class="linkedin">
-            <a href="https://www.linkedin.com/in/camposerick/" target="_blank">
-              <img src="images/linkedin.svg" alt="ícone linkedin" />
-            </a>
-          </li>
-          <li class="instagram">
-            <a href="https://instagram.com/camposerick_" target="_blank">
-              <img src="images/instagram.svg" alt="ícone instagram" />
-            </a>
-          </li>
-          <li class="facebook">
-            <a href="https://www.facebook.com/erick.aguero.7/" target="_blank">
-              <img src="images/facebook.svg" alt="ícone facebook" />
-            </a>
-          </li>
-          <li class="twitter">
-            <a href="https://twitter.com/_erickcampos" target="_blank">
-              <img src="images/twitter.svg" alt="ícone twitter" />
-            </a>
-          </li>
-        </ul>
       </div>
     </main>
 
